2002-06-07  Jeff Freedman  <jeff@amy.nerble.net>

	* ucinternal.cc:  Fixed a couple compile errors if UC debugging
	isn't enabled.
	* Audio/*:  A couple headers needed to be included.

2002-06-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* */Makefile.am: cleaning up distro stuff
	* exult.spec.in: fixed
	* usecode/ucxt/head2data.cc: removed utils.cc dependency
	* version.cc: added USECODE_DEBUGGER symbol to version output

2002-06-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: typo

2002-06-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* *: merged audiotest branch back into main tree:

> 2002-06-06 Simon Quinn <email@simonquinn.co.uk>
>	* Recorded Exult title music in OGG pack and implemented in code
>
> 2002-06-03 Simon Quinn <email@simonquinn.co.uk>
>	* Play different SFX track at night and crickets
>	* Add config option <audio/disablepause> to toggle the pausing of
>    	  the audio when game pauses. (yes or no)
>
> 2002-05-29 Simon Quinn <email@simonquinn.co.uk>
>	* Work around for Usecode bug where track 0 is played at 
>	  Intro Earthquake.
>
> 2002-05-28 Simon Quinn <email@simonquinn.co.uk>
>	* Converted Windows MIDI out to use SDL_mixer, i.e. uses a 
> 	  Generic MidiOut.
>	* Changed MP3 references to DigitalMusic/OGG, now called 
>	  "DigitalMusic" in the audio settings.
>
> 2002-05-27 Simon Quinn <email@simonquinn.co.uk>
> 	* Implemented SDL_mixer/OGG changes into 'audiotest' branch of CVS.

2002-06-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* usecode/*: merged in new non-recursive usecode machine

2002-06-07  Jeff Freedman  <jeff@amy.nerble.net>

	* cheat.cc,drag.cc,drag.h:  Use Dragging_info for Paste so items
	get dropped properly.

2002-06-06  Ryan Nunn  <triforce@merlin.net.au>
	* browser.cc, gamerend.cc, gumps/gump_utils.cc : Fixing problems
	  introduced by Kirben when getting Exult Exult to compile with GCC3.1
	  in Windows.